--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -16,9 +16,40 @@ body {
   overflow-x: hidden;
 }
 
-#logo_ppal {
-  width: 50%;
+/*========== ESTILOS DEL LOGO ========== */
+
+.logo_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#logo_ppal {
+  cursor: pointer;
+  width: 70px;
+  transition: all 0.5s;
+  margin-right: 10px;
+}
+
+#logo_ppal:hover {
+  filter: saturate(3);
+  transition: all 0.5s;
+}
+
+.logo_letras {
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 40px;
+  color: #2c2c2c;
+}
+
+.negrita {
+  font-weight: bold !important;
+}
+
+/* ======================= */
+
+
 
 body {
   font-size: 20px;
@@ -27,6 +58,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f7f7f7;
 }
 
 * {
@@ -79,23 +111,32 @@ button {
   transition: background-color 0.3s ease;
 }
 
+
+
 input {
   margin: 10px;
   border-radius: 5px;
   border-style: none;
   background-color: #dbdbdb;
-  height: 25px;
+  height: 40px;
   text-align: center;
   transition: all 0.5s;
+  font-size: 15px;
 }
 
-input:hover{
+input:hover {
   background-color: #f0f0f0;
   transition: all 0.5s;
 }
 
 .home-button:hover {
   background-color: #0056b3;
+}
+
+button:active {
+  background-color: #00458f !important;
+  transition: unset;
+  transition: all 0.1s;
 }
 
 footer.footer {
@@ -105,6 +146,7 @@ footer.footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  text-align: center;
 }
 
 footer.footer p {
@@ -114,4 +156,87 @@ footer.footer p {
 button:hover {
   transition: all 0.5s;
   background-color: #3195ff;
+}
+
+.clipboard-display {
+  margin: 40px;
+  box-sizing: border-box;  
+  background-color: #f0f0f0;  
+  border-radius: 40px;
+  display: inline-block;  
+  animation: animacionPortapapeles 4s infinite linear;
+}
+
+@keyframes animacionPortapapeles {
+  0% {
+    box-shadow: 0 0 15px rgba(0, 123, 255, 0.7);
+  }
+  50% {
+    box-shadow: 0 0 35px rgba(0, 123, 255, 0.7);
+  }
+  100% {
+    box-shadow: 0 0 15px rgba(0, 123, 255, 0.7);
+  }
+}
+
+
+.clipboard-display p {
+  font-family: monospace;
+  padding: 30px;
+  text-align: center;
+}
+
+.clipboard-display img {
+  padding: 20px;
+  border-radius: 40px;
+  width: 400px;
+}
+
+.cargando {
+  font-size: 80px;
+  animation: cargando-animacion 1.5s infinite linear;
+  color: #007BFF;
+}
+
+@keyframes cargando-animacion {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* ========== MODO OSCURO ===========*/
+
+@media (prefers-color-scheme: dark) {
+
+  body {
+    background-color: #161616;
+  }
+
+  .clipboard-display {
+    background-color: #424242;
+  }
+
+  input {
+    background-color: #333;
+  }
+
+  input:hover {
+    background-color: #444444;
+  }
+
+  /* ESTILOS DEL LOGO*/
+
+  .logo_letras {
+    color: #aaaaaa;
+  }
+
+
 }
