--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -1,3 +1,4 @@
+/* ========== VARIABLES GLOBALES ========== */
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,75 +11,14 @@
   }
 }
 
+/* ========== ESTILOS GENERALES ========== */
 html, body {
-  margin: 0; /* Elimina márgenes predeterminados */
+  margin: 0;
+  /* Elimina márgenes predeterminados */
   padding: 0;
-  height: 100%; /* Asegúrate de que el body ocupe toda la altura */
+  height: 100%;
+  /* Asegúrate de que el body ocupe toda la altura */
 }
-
-.card_login {
-
-}
-
-.img-fluid {
-  margin: 10px !important;
-}
-
-
-/*========== ESTILOS DEL LOGO ========== */
-
-.logo_div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logo_ppal {
-  cursor: pointer;
-  width: 40px !important;
-  transition: all 0.5s;
-  margin-right: 10px;
-}
-
-
-
-.content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin-left: 0; 
-}
-
-.footer {
-  margin-top: auto;
-}
-
-@media (min-width: 992px) {
-  .content {
-    margin-left: 250px; 
-  }
-}
-
-.logo_ppal:hover {
-  filter: saturate(3);
-  transition: all 0.5s;
-}
-
-.logo_letras {
-  text-align: center;
-  font-family: Helvetica, sans-serif;
-  font-size: 25px;
-  color: #2c2c2c;
-}
-
-.negrita {
-  font-weight: bold !important;
-}
-
-/* ======================= */
-
-
 
 body {
   font-size: 20px;
@@ -107,6 +47,102 @@ a {
   }
 }
 
+/* ========== ESTILOS DEL LOGO ========== */
+.logo_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo_ppal {
+  cursor: pointer;
+  width: 40px !important;
+  transition: all 0.5s;
+  margin-right: 10px;
+}
+
+.logo_ppal:hover {
+  filter: saturate(3);
+  transition: all 0.5s;
+}
+
+.logo_letras {
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 20px;
+  color: #2c2c2c;
+}
+
+.negrita {
+  font-weight: bold !important;
+}
+
+/* ========== ESTILOS DEL CONTENIDO PRINCIPAL ========== */
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin-left: 0;
+}
+
+.footer {
+  margin-top: auto;
+}
+
+@media (min-width: 992px) {
+  .content {
+    margin-left: 250px;
+  }
+}
+
+
+/* ========== ESTILOS DE BOTONES ========== */
+button {
+  margin: 20px !important;
+  padding: 10px 20px !important;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px !important;
+  background-color: #007BFF;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  transition: all 0.5s;
+  background-color: #3195ff;
+}
+
+button:active {
+  background-color: #00458f !important;
+  transition: unset;
+  transition: all 0.1s;
+}
+
+.boton_aux {
+  border-radius: 100px !important;
+}
+
+/* ========== ESTILOS DE INPUT ========== */
+input {
+  margin: 10px;
+  border-radius: 5px;
+  border-style: none;
+  background-color: #dbdbdb;
+  height: 40px;
+  text-align: center;
+  transition: all 1s;
+  font-size: 15px;
+}
+
+input:hover {
+  background-color: #f0f0f0;
+  transition: all 0.5s;
+}
+
+/* ========== ESTILOS DEL HOME ========== */
 .home-container {
   text-align: center;
   margin-top: 50px;
@@ -128,68 +164,14 @@ a {
   gap: 20px;
 }
 
-button {
-  margin: 20px !important;
-  padding: 10px 20px !important;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  border-radius: 5px !important;
-  background-color: #007BFF;
-  color: white;
-  transition: background-color 0.3s ease;
-}
-
-
-
-input {
-  margin: 10px;
-  border-radius: 5px;
-  border-style: none;
-  background-color: #dbdbdb;
-  height: 40px;
-  text-align: center;
-  transition: all 0.5s;
-  font-size: 15px;
-}
-
-input:hover {
-  background-color: #f0f0f0;
-  transition: all 0.5s;
-}
-
 .home-button:hover {
   background-color: #0056b3;
 }
 
-button:active {
-  background-color: #00458f !important;
-  transition: unset;
-  transition: all 0.1s;
-}
-
-footer.footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px 0;
-  position: relative; 
-  width: 100%;
-  text-align: center;
-  margin-top: 20px; 
-}
-
-footer.footer p {
-  margin: 0;
-}
-
-button:hover {
-  transition: all 0.5s;
-  background-color: #3195ff;
-}
-
+/* ========== ESTILOS DEL PORTAPAPELES ========== */
 .clipboard-display {
   margin: 40px;
-  box-sizing: border-box;  
+  box-sizing: border-box;
   background-color: #f8f9fa;
   border-radius: 40px;
   animation: animacionPortapapeles 4s infinite linear;
@@ -199,14 +181,15 @@ button:hover {
   0% {
     box-shadow: 0 0 15px rgba(0, 123, 255, 0.7);
   }
+
   50% {
     box-shadow: 0 0 35px rgba(0, 123, 255, 0.7);
   }
+
   100% {
     box-shadow: 0 0 15px rgba(0, 123, 255, 0.7);
   }
 }
-
 
 .clipboard-display p {
   font-family: monospace;
@@ -228,16 +211,18 @@ button:hover {
   font-family: monospace;
   transition: all 0.5s;
 }
+
 .clipboard-box:hover {
-background-color: #a4d0ff;
-transition: all 0.5s;
+  background-color: #a4d0ff;
+  transition: all 0.5s;
 }
 
+/* ========== ESTILOS DE TARJETAS DE DISPOSITIVOS ========== */
 .device-card {
-  padding: 20px;
+  padding: 30px;
   background-color: #d1d1d1;
   border-radius: 8px;
-  margin: 40px;
+  margin: 20px;
   text-align: justify;
 }
 
@@ -249,26 +234,32 @@ transition: all 0.5s;
 .device-card .d-flex img {
   margin: 0;
 }
-.device-card .d-flex img + img {
-  margin-left: 5px; 
+
+.device-card .d-flex img+img {
+  margin-left: 5px;
 }
 
-.boton_aux {
-  border-radius: 100px !important;
-  
+.img-fluid {
+  margin: 10px !important;
 }
 
+/* ========== ESTILOS DEL SPINNER DE CARGA ========== */
 .loading-spinner {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Ocupa toda la altura de la pantalla */
-  width: 100vw; /* Ocupa todo el ancho de la pantalla */
-  position: fixed; /* Fija el spinner en la pantalla */
+  height: 100vh;
+  /* Ocupa toda la altura de la pantalla */
+  width: 100vw;
+  /* Ocupa todo el ancho de la pantalla */
+  position: fixed;
+  /* Fija el spinner en la pantalla */
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
-  z-index: 1000; /* Asegúrate de que esté por encima de otros elementos */
+  background-color: rgba(255, 255, 255, 0.8);
+  /* Fondo semi-transparente */
+  z-index: 1000;
+  /* Asegúrate de que esté por encima de otros elementos */
 }
 
 .cargando {
@@ -281,14 +272,17 @@ transition: all 0.5s;
   0% {
     transform: rotate(0deg);
   }
+
   50% {
     transform: rotate(180deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
 
+/* ========== ESTILOS DE ANIMACIONES DE ALERTAS ========== */
 .alert-enter {
   opacity: 0;
   transform: translateY(-20px);
@@ -310,20 +304,21 @@ transition: all 0.5s;
   transition: opacity 300ms, transform 300ms;
 }
 
-.device-card {
-  padding: 30px;
-  background-color: #d1d1d1;
-  border-radius: 8px;
-  margin: 20px;
-  text-align: justify;
+
+/* ========== ESTILOS DEL FOOTER ========== */
+
+.footer {
+  background-color: rgb(241, 241, 241) !important;
+  color: black !important;
 }
 
-/*ESTILOS MENU*/
+
+/* ========== ESTILOS DEL MENÚ ========== */
 
 .bg-light {
-  -webkit-box-shadow: 22px 7px 37px -32px rgba(158,158,158,1);
-  -moz-box-shadow: 22px 7px 37px -32px rgba(158,158,158,1);
-  box-shadow: 22px 7px 37px -32px rgba(158,158,158,1);
+  -webkit-box-shadow: 22px 7px 37px -32px rgba(158, 158, 158, 1);
+  -moz-box-shadow: 22px 7px 37px -32px rgba(158, 158, 158, 1);
+  box-shadow: 22px 7px 37px -32px rgba(158, 158, 158, 1);
 }
 
 .nav-link {
@@ -337,25 +332,40 @@ transition: all 0.5s;
 }
 
 .usuario {
-  color: rgb(78, 78, 78) !important;
-  cursor: unset !important;
+  font-size: 22px !important;
+  padding: 15px !important;
+  color: rgb(99, 99, 99) !important;
+  margin-bottom: 0px !important;
 }
 
-.usuario:hover{
-  color: rgb(78, 78, 78) !important;
-  cursor: unset !important;
+.div_usuario {
+  border-style: none;
+  border-radius: 10px;
+  border-width: 2px;
+  background-color: #dadada;
+  padding: 10px;
 }
 
-/* ========== MODO OSCURO ===========*/
+.navbar {
+  background-color: rgb(241, 241, 241) !important;
+  color: black !important;
+}
 
+.flex-column {
+  background-color: rgb(241, 241, 241) !important;
+  color: black !important;
+}
+
+/* ========== ESTILOS DEL MODO OSCURO ========== */
 @media (prefers-color-scheme: dark) {
 
   body {
-    background-color: #161616;
+    background-color: #161616 !important;
+    color: white !important;
   }
 
   .clipboard-display {
-    background-color: #424242;
+    background-color: #424242 !important;
   }
 
   input {
@@ -366,14 +376,75 @@ transition: all 0.5s;
     background-color: #444444;
   }
 
-  /* ESTILOS DEL LOGO*/
-
   .logo_letras {
     color: #aaaaaa;
   }
 
   .device-card {
     background-color: #444444;
+  }
+
+  .card {
+    background-color: #3a3a3a !important;
+    color: white !important;
+  }
+
+  .clipboard-box {
+    background-color: #4e4e4e !important;
+    color: white;
+    border-style: none;
+  }
+
+  .clipboard-box:hover {
+    background-color: #2c5377 !important;
+    color: white;
+  }
+
+  .navbar {
+    background-color: #272727 !important;
+    color: white !important;
+    border-style: none;
+  }
+
+  .flex-column {
+    background-color: #494949 !important;
+    color: white !important;
+    border-style: none;
+  }
+
+  .footer {
+    background-color: #414141 !important;
+    color: white !important;
+  }
+
+  .logo_letras {
+    color: #ffffff;
+  }
+
+  .usuario {
+    color: #cfcfcf !important;
+  }
+  
+  .div_usuario {
+    background-color: #525252;
+  }
+
+  .nav-link {
+    color: white !important;
+  }
+
+  .nav-link:hover {
+    color: rgb(132, 165, 255) !important;
+  }
+  
+  input {
+    background-color: #696969 !important;
+    border-style: none !important;
+    color: rgb(255, 255, 255) !important;
+  }
+  
+  input:hover {
+    background-color: #555555 !important;
   }
 
 
