--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -75,7 +75,7 @@ a {
   font-weight: bold !important;
 }
 
-/* ========== ESTILOS DEL CONTENIDO PRINCIPAL ========== */
+/* ========== ESTILOS DEL DASHBOARD ========== */
 .content {
   flex: 1;
   display: flex;
@@ -87,6 +87,38 @@ a {
 .footer {
   margin-top: auto;
 }
+
+.clipboard-display {
+  position: relative;
+  margin: 40px auto;
+  box-sizing: border-box;
+  background-color: #f8f9fa;
+  border-radius: 40px;
+  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+}
+
+.clipboard-display.portal-animation {
+  transform: scale(1.1);
+  box-shadow: 0 0 30px rgba(0, 123, 255, 0.8);
+  animation: portalEffect 1s ease-in-out;
+}
+
+@keyframes portalEffect {
+  0% {
+    transform: scale(0.7);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+    box-shadow: 0 0 50px rgba(0, 123, 255, 1);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 
 
 /* ========== ESTILOS DE BOTONES ========== */
