--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -463,12 +463,12 @@ input:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #1e4683, #003288);
+  background: rgb(248,249,250);
+  background: linear-gradient(180deg, #f8f9fa 0%, rgba(117,144,190,1) 43%, rgba(0,50,136,1) 100%);
   background-size: 400% 400%;
   color: white;
   padding: 2rem;
   text-align: center;
-  animation: gradientAnimation 6s ease infinite;
   -webkit-box-shadow: 1px 31px 60px -42px rgba(0, 0, 0, 0.83);
   -moz-box-shadow: 1px 31px 60px -42px rgba(0, 0, 0, 0.83);
   box-shadow: 1px 31px 60px -42px rgba(0, 0, 0, 0.83);
@@ -717,5 +717,9 @@ input:hover {
   .div_usuario {
     background-color: #48484836 !important;
   }
+
+  .hero-section {
+    background: linear-gradient(180deg, rgba(34,34,34,1) 0%, rgba(0,50,136,1) 100%);
+}
 
 }
