--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -129,6 +129,35 @@ a {
   margin-bottom: 20px;
   width: 100%;
   font-size: 20px !important;
+  transition: all 0.5 ease;
+}
+
+.botones_ajustes.btn-primary {
+  background-image: linear-gradient(90deg, rgba(0, 123, 255, 0.6), rgba(0, 255, 255, 0.301), rgba(0, 123, 255, 0.6));
+  box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+  border: 2px solid transparent;
+}
+
+.botones_ajustes.btn-danger {
+  background-image: linear-gradient(90deg, rgba(220, 53, 69, 0.6), rgba(255, 99, 71, 0.6), rgba(220, 53, 69, 0.6));
+  box-shadow: 0 0 20px rgba(220, 53, 69, 0.5);
+  border: 2px solid transparent;
+}
+
+.botones_ajustes:hover {
+  opacity: 0.9;
+  filter: brightness(1.2);
+  transition: all 0.3s ease;
+}
+
+.botones_ajustes:active {
+  filter: brightness(0.5);
+
+}
+
+.botones_ajustes:disabled {
+  opacity: 0.2 !important;
+  pointer-events: none;
 }
 
 @media (min-width: 992px) {
@@ -139,12 +168,13 @@ a {
 
 
 /* ========== ESTILOS DE BOTONES ========== */
-button {
-  transition: background-color 0.3s ease;
+
+.btn button {
+  transition: background-color 0.5s ease;
 }
 
-button:hover {
-  transition: all 0.5s;
+.btn button:hover {
+  transition: all 0.3s;
 }
 
 .boton_aux {
@@ -155,9 +185,61 @@ button:hover {
   border: none;
   border-radius: 5px !important;
   color: white;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.5s ease;
   border-radius: 100px !important;
 }
+
+
+.boton_aux.btn-primary {
+  background-image: linear-gradient(90deg, rgba(0, 123, 255, 0.6), rgba(0, 255, 255, 0.301), rgba(0, 123, 255, 0.6));
+  box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+  border: 2px solid transparent;
+}
+
+.boton_aux.btn-success {
+  background-image: linear-gradient(90deg, rgba(40, 167, 69, 0.6), rgba(72, 209, 75, 0.6), rgba(40, 167, 69, 0.6));
+  box-shadow: 0 0 20px rgba(40, 167, 69, 0.5);
+  border: 2px solid transparent;
+}
+
+.boton_aux.btn-warning {
+  background-image: linear-gradient(90deg, rgba(255, 193, 7, 0.6), rgba(255, 255, 0, 0.6), rgba(255, 193, 7, 0.6));
+  box-shadow: 0 0 20px rgba(255, 193, 7, 0.5);
+  border: 2px solid transparent;
+
+
+}
+
+.boton_aux.btn-danger {
+  background-image: linear-gradient(90deg, rgba(220, 53, 69, 0.6), rgba(255, 99, 71, 0.6), rgba(220, 53, 69, 0.6));
+  box-shadow: 0 0 20px rgba(220, 53, 69, 0.5);
+  border: 2px solid transparent;
+}
+
+.boton_aux:hover {
+  opacity: 0.9;
+  filter: brightness(1.3);
+  transform: scale(1.05);
+  transition: all 0.3s ease;
+}
+
+.boton_aux:active {
+  transform: scale(1.05);
+  filter: brightness(0.5);
+
+}
+
+.boton_aux:disabled {
+  opacity: 0.2 !important;
+  pointer-events: none;
+}
+
+.btn.btn-secondary {
+  background-image: linear-gradient(90deg, rgba(83, 83, 83, 0.6), rgba(83, 83, 83, 0.281), rgba(48, 48, 48, 0.6));
+  box-shadow: 0 0 20px rgba(48, 48, 48, 0.5);
+  border: 2px solid transparent;
+}
+
 
 /* ========== ESTILOS DE INPUT ========== */
 input {
@@ -217,9 +299,9 @@ input:hover {
   text-align: center;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
-  backdrop-filter: blur(10px);
   border-radius: 20px;
   animation: brillo 3s infinite alternate;
+  user-select: text;
 }
 
 .clipboard-display::after {
@@ -236,22 +318,27 @@ input:hover {
   -webkit-mask-composite: destination-out;
   animation: rotate-gradient 2s infinite alternate;
   z-index: 1;
+  pointer-events: none;
+  /* Añadido para permitir la selección */
 }
+
 
 @keyframes rotate-gradient {
   0% {
     background-position: 0% 50%;
   }
+
   100% {
     background-position: 100% 50%;
   }
-  
+
 }
 
 @keyframes brillo {
   0% {
     box-shadow: 0 0 10px rgba(19, 133, 255, 0.5);
   }
+
   100% {
     box-shadow: 0 0 25px rgba(0, 123, 255, 0.9);
   }
@@ -262,6 +349,7 @@ input:hover {
   font-family: monospace;
   padding: 30px;
   text-align: center;
+  user-select: text;
 }
 
 .clipboard-display img {
@@ -390,7 +478,9 @@ input:hover {
 }
 
 .nav-link:hover {
-  color: #007BFF !important;
+  color: #ffffff !important;
+  background-color: #0000002d;
+  border-radius: 8px;
 }
 
 .usuario {
@@ -444,7 +534,9 @@ input:hover {
   transition: background-color 0.3s ease-in-out;
 }
 
-
+.btn-close {
+  background-color: rgb(117, 117, 117) !important;
+}
 /* Estilos para la Navbar superior en modo escritorio */
 .navbar.d-none.d-lg-block {
   border-bottom: 1px solid #ddd;
@@ -458,7 +550,7 @@ input:hover {
 }
 
 .navbar.d-none.d-lg-block .nav-link:hover {
-  color: #007BFF !important;
+  color: #ffffff !important;
 }
 
 .navbar.d-none.d-lg-block .div_usuario {
@@ -480,6 +572,7 @@ input:hover {
 .navbar.d-none.d-lg-block .text-danger:hover {
   color: #c82333 !important;
 }
+
 
 /* ========== ESTILOS DEL LOGIN ========== */
 /* Estilos generales para la landing page */
@@ -583,10 +676,28 @@ input:hover {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  background-image: linear-gradient(90deg, rgba(0, 123, 255, 0.6), rgba(0, 255, 255, 0.301), rgba(0, 123, 255, 0.6));
+  box-shadow: 0 0 20px rgba(0, 123, 255, 0.5);
+  border: 2px solid transparent;
+  transition: all 0.5s ease;
 }
 
+
 .login-button:hover {
-  background-color: #2575fc;
+  opacity: 0.9;
+  filter: brightness(1.2);
+  transition: all 0.5s ease;
+}
+
+.login-button:active {
+  transform: scale(1.05);
+  filter: brightness(0.5);
+
+}
+
+.login-button:disabled {
+  opacity: 0.2 !important;
+  pointer-events: none;
 }
 
 .register-link {
@@ -718,7 +829,12 @@ input:hover {
     color: rgb(199 199 199) !important;
   }
 
-  .offcanvas, .offcanvas-lg, .offcanvas-md, .offcanvas-sm, .offcanvas-xl, .offcanvas-xxl {
+  .offcanvas,
+  .offcanvas-lg,
+  .offcanvas-md,
+  .offcanvas-sm,
+  .offcanvas-xl,
+  .offcanvas-xxl {
     --bs-offcanvas-bg: unset;
     background: rgb(28 28 28 / 79%) !important;
     backdrop-filter: blur(10px);
