--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -534,9 +534,7 @@ input:hover {
   transition: background-color 0.3s ease-in-out;
 }
 
-.btn-close {
-  background-color: rgb(117, 117, 117) !important;
-}
+
 /* Estilos para la Navbar superior en modo escritorio */
 .navbar.d-none.d-lg-block {
   border-bottom: 1px solid #ddd;
@@ -725,6 +723,41 @@ color: rgb(200, 2, 2);
 font-size: 40px;
 }
 
+/* ========== ESTILO DE LAS VENTANAS MODALES ========== */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-dialog {
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  max-width: 400px;
+}
+
+.modal-content {
+  border: none;
+  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(10px) !important;
+}
+
+.modal-header,
+.modal-footer {
+  border: none;
+}
+
+
 /* ========== ESTILOS DEL MODO OSCURO ========== */
 @media (prefers-color-scheme: dark) {
 
@@ -880,6 +913,10 @@ font-size: 40px;
   .hero-section {
     background: linear-gradient(180deg, #222, #000f28);
     color: white !important;
+  }
+
+  .btn-close {
+    background-color: rgb(117, 117, 117) !important;
   }
 
 }
