--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -730,27 +730,28 @@ font-size: 40px;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background: unset !important;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .modal-dialog {
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  background: rgba(255, 255, 255, 0.6); 
+  backdrop-filter: blur(15px); 
+  border-radius: 12px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   padding: 20px;
   max-width: 400px;
 }
 
 .modal-content {
+  background: unset !important;
+  background: rgba(255, 255, 255, 0.6); 
+  backdrop-filter: blur(15px) !important;
   border: none;
-  background-color: transparent;
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px) !important;
 }
+
 
 .modal-header,
 .modal-footer {
@@ -917,6 +918,29 @@ font-size: 40px;
 
   .btn-close {
     background-color: rgb(117, 117, 117) !important;
+  }
+
+  
+  .modal-dialog {
+    background: rgba(56, 56, 56, 0.6); 
+    backdrop-filter: blur(15px); 
+    border-radius: 12px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    max-width: 400px;
+  }
+  
+  .modal-content {
+    background: unset !important;
+    background: rgba(255, 255, 255, 0.6); 
+    backdrop-filter: blur(15px) !important;
+    border: none;
+  }
+  
+  
+  .modal-header,
+  .modal-footer {
+    border: none;
   }
 
 }
