--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -19,6 +19,16 @@ body {
   height: 100%;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+select {
+  border-radius: 8px;
+  border-style: none;
+  background-color: #dbdbdb;
+}
+
 body {
   font-size: 20px;
   color: var(--foreground);
@@ -141,6 +151,12 @@ a {
 .botones_ajustes.btn-danger {
   background-image: linear-gradient(90deg, rgba(220, 53, 69, 0.6), rgba(255, 99, 71, 0.6), rgba(220, 53, 69, 0.6));
   box-shadow: 0 0 20px rgba(220, 53, 69, 0.5);
+  border: 2px solid transparent;
+}
+
+.botones_ajustes.btn-success {
+  background-image: linear-gradient(90deg, rgba(40, 167, 69, 0.6), rgba(72, 209, 75, 0.6), rgba(40, 167, 69, 0.6));
+  box-shadow: 0 0 20px rgba(40, 167, 69, 0.5);
   border: 2px solid transparent;
 }
 
@@ -398,10 +414,12 @@ input:hover {
   margin: 10px !important;
 }
 
-.tipo_dispositivo{
-background-color: rgb(202, 236, 255);
-padding: 15px;
-display: flex; justify-content: center; align-items: center;
+.tipo_dispositivo {
+  background-color: rgb(202, 236, 255);
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ========== ESTILOS DEL SPINNER DE CARGA ========== */
@@ -733,9 +751,9 @@ display: flex; justify-content: center; align-items: center;
   filter: hue-rotate(150deg);
 }
 
-.no_soportado{
-color: rgb(200, 2, 2);
-font-size: 40px;
+.no_soportado {
+  color: rgb(200, 2, 2);
+  font-size: 40px;
 }
 
 /* ========== ESTILO DE LAS VENTANAS MODALES ========== */
@@ -752,8 +770,8 @@ font-size: 40px;
 }
 
 .modal-dialog {
-  background: rgba(255, 255, 255, 0.6); 
-  backdrop-filter: blur(15px); 
+  background: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(15px);
   border-radius: 12px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   padding: 20px;
@@ -762,7 +780,7 @@ font-size: 40px;
 
 .modal-content {
   background: unset !important;
-  background: rgba(255, 255, 255, 0.6); 
+  background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(15px) !important;
   border: none;
 }
@@ -772,6 +790,78 @@ font-size: 40px;
 .modal-footer {
   border: none;
 }
+
+.modal select {
+  padding: 10px;
+  border-style: none;
+  background-color: #e9e9e9;
+  border-radius: 8px;
+}
+
+/* ========== ESTILOS DEL ADMIN ========== */
+.admin-page {
+  padding: 20px;
+}
+
+.create-user-form {
+  margin-bottom: 20px;
+}
+
+.create-user-form div {
+  margin-bottom: 10px;
+}
+
+.create-user-form label {
+  margin-bottom: 5px;
+}
+
+.create-user-form input,
+.create-user-form select {
+  width: 100%;
+  padding: 8px;
+  text-align: left;
+}
+
+.users-table {
+  width: 100%;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+
+.users-table th,
+.users-table td {
+  text-align: left;
+  background-color: #f7f7f7;
+  padding: 8px;
+  border-style: solid;
+  border-color: #cacaca;
+  border-width: 1px;
+}
+
+.users-table th {
+  background-color: #dbdbdb;
+  padding: 8px;
+
+}
+
+/* ========== ESTILOS DEL APARTADO DE AYUDA ========== */
+.tabla_ayuda {
+  border-radius: 8px;
+  background-color: #fafafa;
+}
+
+.tabla_ayuda th,
+.tabla_ayuda td {
+  padding: 10px;
+}
+
+.tabla_ayuda th {
+  background-color: #e0e0e0;
+  padding: 10px;
+  margin: 10px !important;
+}
+
+
 
 
 /* ========== ESTILOS DEL MODO OSCURO ========== */
@@ -852,17 +942,23 @@ font-size: 40px;
 
   input {
     border-style: none !important;
-    color: rgb(0, 0, 0) !important;
-    background-color: #ffffffbf !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: #3b3b3bbf !important;
   }
 
   input:hover {
-    background-color: #c3d3e7 !important;
+    background-color: #686868 !important;
   }
 
   input:active {
-    background-color: #ffffff !important;
+    background-color: #2c2c2c !important;
   }
+
+  input::placeholder {
+    color: rgb(212, 212, 212) !important;
+  }
+
+
 
   .login-section {
     background-color: #222222 !important;
@@ -935,46 +1031,88 @@ font-size: 40px;
     background-color: rgb(117, 117, 117) !important;
   }
 
-  
+
   .modal-dialog {
-    background: rgba(56, 56, 56, 0.6); 
-    backdrop-filter: blur(15px); 
+    background: rgba(56, 56, 56, 0.6);
+    backdrop-filter: blur(15px);
     border-radius: 12px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     padding: 20px;
     max-width: 400px;
   }
-  
+
   .modal-content {
     background: unset !important;
-    background: rgba(255, 255, 255, 0.6); 
+    background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(15px) !important;
     border: none;
   }
-  
+
   .login-landing-page {
     background-color: #161616 !important;
     color: white !important;
   }
-  
+
   .modal-header,
   .modal-footer {
     border: none;
   }
 
-  .tipo_dispositivo{
+  .tipo_dispositivo {
     background-color: rgb(0, 47, 75);
     padding: 15px;
-    display: flex; justify-content: center; align-items: center;
-    }
-    
-    .enlace_github {
-      color: rgb(255, 255, 255) !important;
-      text-decoration: none;
-    }
-    
-    .enlace_github:hover {
-      color: rgb(0, 162, 255) !important;
-    }
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .enlace_github {
+    color: rgb(255, 255, 255) !important;
+    text-decoration: none;
+  }
+
+  .enlace_github:hover {
+    color: rgb(0, 162, 255) !important;
+  }
+
+  .users-table th,
+  .users-table td {
+    background-color: #272727;
+  }
+
+  .users-table th {
+    background-color: #000000;
+  }
+
+  .modal select {
+    background-color: #474747;
+  }
+
+  .form-control {
+    background-color: #222222 !important;
+    border: unset !important;
+    color: white !important;
+  }
+
+  .tabla_ayuda {
+    background-color: #272727;
+  }
+  
+  .tabla_ayuda th {
+    background-color: #000000;
+  }
+  
+
+  .input {
+    color: white !important;
+  }
+
+  select {
+    background-color: #3b3b3bbf !important;
+  }
+
+  .botones_ajustes:hover {
+    opacity: 0.9;
+    filter: brightness(1.5);
+  }
 }
