--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -39,6 +39,24 @@ body {
   background-color: #f7f7f7;
 }
 
+.content {
+  padding-top: 120px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin-left: 0;
+}
+
+.content-sinnavbar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin-left: 0;
+}
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -63,14 +81,27 @@ a {
 }
 
 @media only screen and (max-width: 991px) {
-  ::-webkit-scrollbar {
-    display: none;
+  html, body {
+    overflow: hidden;
+    height: 100%;
+  }
+  .scroll-container {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none; 
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .scroll-container::-webkit-scrollbar {
+    display: none; 
+  }
+
+  .scroll-container main {
+    flex-grow: 1; 
   }
 }
-
-  .container {
-    -webkit-overflow-scrolling: touch;
-  }
 
 
   /* ========== ESTILOS DEL LOGO ========== */
@@ -104,15 +135,6 @@ a {
   }
 
   /* ========== ESTILOS DEL DASHBOARD ========== */
-  .content {
-    padding-top: 120px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin-left: 0;
-  }
-
   .footer {
     margin-top: auto;
   }
