Ajustes modo oscuro

--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -1059,6 +1059,11 @@ input:hover {
     color: #aaaaaa;
   }
 
+  .device-card-dashboard {
+    background-color: #444444;
+    color: white;
+  }
+
   .device-card {
     background-color: #444444;
     color: white;
