--- a/frontend/portacloud/app/globals.css
+++ b/frontend/portacloud/app/globals.css
@@ -981,7 +981,7 @@ padding: 10px !important;
 
 /* ========== ESTILO DE LAS VENTANAS MODALES ========== */
 .modal-overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -993,6 +993,7 @@ padding: 10px !important;
 }
 
 .modal-dialog {
+  margin-top: 130px !important;
   background: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(15px);
   border-radius: 12px;
